[gd_scene load_steps=9 format=3 uid="uid://cx2lmoxmk0etj"]

[ext_resource type="Script" uid="uid://dkqfkqwiuj3b6" path="res://scenes/question/question.gd" id="1_33idg"]
[ext_resource type="FontFile" uid="uid://eqksgfrkbeqx" path="res://assets/theme/SourceHanSerifCN-Bold.otf" id="1_jrjjw"]
[ext_resource type="Resource" uid="uid://begadyv4efrck" path="res://data/question_stats/test_question_full.tres" id="2_un4lh"]
[ext_resource type="PackedScene" uid="uid://c4vufjkerd7re" path="res://scenes/movable_button/movable_button.tscn" id="2_v7jrx"]
[ext_resource type="StyleBox" uid="uid://1tdd80b5hdo5" path="res://assets/theme/question_description.tres" id="3_61a41"]
[ext_resource type="PackedScene" uid="uid://in7jqdn8jhwk" path="res://scenes/coupon_pop_window/coupon_pop_window.tscn" id="6_un4lh"]
[ext_resource type="PackedScene" uid="uid://bkkh3f7rigoi7" path="res://scenes/goods_pop_window/goods_pop_window.tscn" id="7_goods_pop"]
[ext_resource type="PackedScene" uid="uid://dqtyklaigvd8n" path="res://scenes/relic_pop_window/relic_pop_window.tscn" id="8_relic_pop"]

[node name="Question" type="Node2D"]
script = ExtResource("1_33idg")
question_stat = ExtResource("2_un4lh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 1895.0
offset_bottom = 1055.0

[node name="Description" type="PanelContainer" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 650.0
offset_bottom = 980.0
theme_override_styles/panel = ExtResource("3_61a41")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Description"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0.9411765, 1)
theme_override_colors/font_shadow_color = Color(0.5019608, 0.5019608, 0.5019608, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("1_jrjjw")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "	无家可归、无处可住，你只能指望靠工作换取食物和容身之所。你还年轻——虽然也只是相对而言——好在经验多少能弥补体力上的不足。
	可就算你把报酬压得再低，也始终无人愿意接纳你。毕竟，谁又会愿意雇用一个带着人生“污点”的人？被“拼弃弃”辞退的经历，就像一道无法摆脱的阴影，笼罩着你的全部过去。
	然而，终究还是有人向你敞开了门——那是“拼弃弃”旗下的一家外卖公司。它来者不拒，无论什么人都照单全收。但相应的，工资也低得可怜，甚至根本称不上是工资——只能拿到一些几乎毫无价值的优惠券。
	不过，此时此刻，这些“报酬”却依然必要。至少，它们能让你暂时活下去。"

[node name="MovableButton1" parent="Panel" instance=ExtResource("2_v7jrx")]
layout_mode = 1
offset_left = 1150.0
offset_top = 175.0
offset_right = -464.0
offset_bottom = -727.0
button_size = Vector2(512, 128)

[node name="MovableButton2" parent="Panel" instance=ExtResource("2_v7jrx")]
layout_mode = 1
offset_left = 1150.0
offset_top = 425.0
offset_right = -464.0
offset_bottom = -477.0
button_size = Vector2(512, 128)

[node name="MovableButton3" parent="Panel" instance=ExtResource("2_v7jrx")]
layout_mode = 1
offset_left = 1150.0
offset_top = 675.0
offset_right = -464.0
offset_bottom = -227.0
button_size = Vector2(512, 128)

[node name="CouponPopWindow" parent="." instance=ExtResource("6_un4lh")]
visible = false
offset_left = 1009.0
offset_top = 125.0
offset_right = 1598.0
offset_bottom = 969.0

[node name="GoodsPopWindow" parent="." instance=ExtResource("7_goods_pop")]
visible = false
offset_left = 800.0
offset_top = 200.0
offset_right = 1400.0
offset_bottom = 600.0

[node name="RelicPopWindow" parent="." instance=ExtResource("8_relic_pop")]
visible = false
offset_left = 800.0
offset_top = 200.0
offset_right = 1400.0
offset_bottom = 600.0

[connection signal="button_is_clicked" from="Panel/MovableButton1" to="." method="_on_movable_button_1_button_is_clicked"]
[connection signal="button_is_clicked" from="Panel/MovableButton2" to="." method="_on_movable_button_2_button_is_clicked"]
[connection signal="button_is_clicked" from="Panel/MovableButton3" to="." method="_on_movable_button_3_button_is_clicked"]
